fix(viewer): increase floating-wallet z-index

--- a/projects/viewer/src/app/app.component.scss
+++ b/projects/viewer/src/app/app.component.scss
@@ -71,6 +71,7 @@
       position: absolute;
       left: 10%;
       top: 10%;
+      z-index: 11;
 
       .floating-close {
         display: block;
@@ -84,6 +85,7 @@
       position: absolute;
       left: 0;
       top: 0;
+      z-index: 10;
     }
   }
 }
